@@ -374,7 +374,7 @@ class RepositoryFormatKnit(MetaDirRepositoryFormat):
             versionedfile_kwargs={'delta':False,
                                   'factory':knit.KnitPlainFactory(),
                                  },
-            escaped=True,
+            escaped=False,
             )
         return KnitRevisionStore(versioned_file_store)
 
